Add some extra pages found in testing

--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
@@ -73,7 +73,7 @@ title: Municipal Regulations On A Standard Chart Of Accounts
 <td></td>
 <td>
 <p><strong><u></u></strong> </p>
-<p><strong><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Version%206"><strong><u><font>SCOA Segment Detail - (Version 6) for implementation 2017/18 MTREF</font></u></strong></a></u></strong></p></td>
+<p><strong><u><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Version%206"><strong><u><font>SCOA Segment Detail - (Version 6) for implementation 2017/18 MTREF</font></u></strong></a></u></strong></p></td>
 <td></td></tr>
 <tr>
 <td> </td>
@@ -99,15 +99,15 @@ title: Municipal Regulations On A Standard Chart Of Accounts
 <td> </td></tr>
 <tr>
 <td></td>
-<td><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01. mSCOA Circulars"><u><font>01. mSCOA Circulars</font></u></a></u></td>
+<td><u><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01. mSCOA Circulars"><u><font>01. mSCOA Circulars</font></u></a></u></td>
 <td></td></tr>
 <tr>
 <td></td>
-<td><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02. mSCOA ICF"><u><font>02. mSCOA Integrated Consultative Forums (ICF)</font></u></a></u></td>
+<td><u><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/02. mSCOA ICF"><u><font>02. mSCOA Integrated Consultative Forums (ICF)</font></u></a></u></td>
 <td></td></tr>
 <tr>
 <td></td>
-<td><u><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/03. mSCOA Training"><u><font>03. mSCOA Training</font></u></a></u></td>
+<td><u><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/03. mSCOA Training"><u><font>03. mSCOA Training</font></u></a></u></td>
 <td></td></tr>
 <tr>
 <td></td>
@@ -123,11 +123,11 @@ title: Municipal Regulations On A Standard Chart Of Accounts
 <td></td></tr>
 <tr>
 <td></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Transversal%20Tender"><font>07. Tenders</font></a></td>
+<td><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Transversal%20Tender"><font>07. Tenders</font></a></td>
 <td></td></tr>
 <tr>
 <td></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/IMFO Conference 11-12 July 2016"><font>08. IMFO Conference 11-12 July 2016</font></a></td>
+<td><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/IMFO Conference 11-12 July 2016"><font>08. IMFO Conference 11-12 July 2016</font></a></td>
 <td></td></tr>
 <tr>
 <td></td>
