--- a/RegulationsandGazettes/index.html
+++ b/RegulationsandGazettes/index.html
@@ -23,19 +23,19 @@ title: Regulations and Gazettes
 <td><font>(1,383kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/foldernew.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Pages/default.aspx"><font>Municipal Regulations on a Standard Chart of Accounts (SCOA)</font></a></td>
+<td><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html"><font>Municipal Regulations on a Standard Chart of Accounts (SCOA)</font></a></td>
 <td></td></tr>
 <tr>
 <td><img src="/PublishingImages/Folder.jpg"/></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccounts/Pages/default.aspx"><font>Draft Municipal Regulations on a Standard Chart of Accounts (SCOA) </font></a></td>
+<td><a href="/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccounts/index.html"><font>Draft Municipal Regulations on a Standard Chart of Accounts (SCOA) </font></a></td>
 <td></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Municipal%20Budget%20and%20Reporting%20Regulations"><font>Municipal Budget and Reporting Regulations</font></a></td>
+<td><a href="/RegulationsandGazettes/Municipal%20Budget%20and%20Reporting%20Regulations"><font>Municipal Budget and Reporting Regulations</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Gazette%20No%2031656"><font>Updated exemptions from the MFMA sections 122 (2) and (3) - Gazette No 31656, 28 November 2008</font></a></td>
+<td><a href="/RegulationsandGazettes/Gazette%20No%2031656"><font>Updated exemptions from the MFMA sections 122 (2) and (3) - Gazette No 31656, 28 November 2008</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
@@ -47,7 +47,7 @@ title: Regulations and Gazettes
 <td><font>(771kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/GazetteNo29967"><font>Municipal Regulations and Guidelines on Minimum Competency Levels - Gazette No 29967, 15 June 2007</font></a></td>
+<td><a href="/RegulationsandGazettes/GazetteNo29967"><font>Municipal Regulations and Guidelines on Minimum Competency Levels - Gazette No 29967, 15 June 2007</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
@@ -169,7 +169,7 @@ title: Regulations and Gazettes
 <td><font>(117kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Gazette%20No%2032142"><font>Government Gazette 32142 dated 17 April 2009 : 2009/10 Provincial and Local Government Conditional Grant Frameworks, Allocations to Municipalities and Schedule 8 Allocations to Provinces</font></a></td>
+<td><a href="/RegulationsandGazettes/Gazette%20No%2032142"><font>Government Gazette 32142 dated 17 April 2009 : 2009/10 Provincial and Local Government Conditional Grant Frameworks, Allocations to Municipalities and Schedule 8 Allocations to Provinces</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
@@ -185,7 +185,7 @@ title: Regulations and Gazettes
 <td><font>(241kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Gazette%20No%2031804"><font>Government Gazette 31804 dated 23 January 2009 : Draft Municipal Budget and Reporting Regulations</font></a></td>
+<td><a href="/RegulationsandGazettes/Gazette%20No%2031804"><font>Government Gazette 31804 dated 23 January 2009 : Draft Municipal Budget and Reporting Regulations</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
@@ -201,7 +201,7 @@ title: Regulations and Gazettes
 <td><font>(154kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Government%20Gazette%2030978"><font>Government Gazette 30978 dated 14 April 2008 : 2008/09 Local Government Allocations and Provincial and Local Government Frameworks</font></a></td>
+<td><a href="/RegulationsandGazettes/Government%20Gazette%2030978"><font>Government Gazette 30978 dated 14 April 2008 : 2008/09 Local Government Allocations and Provincial and Local Government Frameworks</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
@@ -209,7 +209,7 @@ title: Regulations and Gazettes
 <td><font>(195kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/RegulationsandGazettes/Gazette%20No%2028411"><font>Supply Chain Management Exemption from Regulation 44 - Gazette No 28411 and Condonation Notice, 18 January 2006</font></a></td>
+<td><a href="/RegulationsandGazettes/Gazette%20No%2028411"><font>Supply Chain Management Exemption from Regulation 44 - Gazette No 28411 and Condonation Notice, 18 January 2006</font></a></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
