--- a/Documents/02. Built Environment Performance Plans/2017-18/3. BE Indicators Toolkit Support/index.html
+++ b/Documents/02. Built Environment Performance Plans/2017-18/3. BE Indicators Toolkit Support/index.html
@@ -11,9 +11,13 @@ layout: default
 original_url: http://mfma.treasury.gov.za/Documents/02. Built Environment Performance
   Plans/2017-18/3. BE Indicators Toolkit Support
 table_items:
-- {label: BEPP Indicators Format, modified_date: '11/14/2016 12:50 PM', path: 'http://mfmamirror.s3.amazonaws.com/Documents/02.
+- {label: BEPP Indicators 201718 V2, modified_date: '2/9/2017 4:11 PM', path: 'http://mfmamirror.s3.amazonaws.com/Documents/02.
     Built Environment Performance Plans/2017-18/3. BE Indicators Toolkit Support/BEPP
-    Indicators Format.xls', type: table_form_item, user: Elsabe Rossouw}
+    Indicators 201718 V2.xls', type: table_form_item, user: Elsabe Rossouw}
+- {label: Reporting format for city reported indicators V1, modified_date: '2/9/2017
+    4:11 PM', path: 'http://mfmamirror.s3.amazonaws.com/Documents/02. Built Environment
+    Performance Plans/2017-18/3. BE Indicators Toolkit Support/Reporting format for
+    city reported indicators V1.xls', type: table_form_item, user: Elsabe Rossouw}
 - {label: Reporting Reforms Conceptual Framework, modified_date: '8/22/2016 3:15 PM',
   path: 'http://mfmamirror.s3.amazonaws.com/Documents/02. Built Environment Performance
     Plans/2017-18/3. BE Indicators Toolkit Support/Reporting Reforms Conceptual Framework.pdf',
