--- a/Media_Releases/Municipal Payment Schedule/Pages/1617Jul/index.html
+++ b/Media_Releases/Municipal Payment Schedule/Pages/1617Jul/index.html
@@ -1,7 +1,7 @@
 ---
 breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
   href="http://mfma.treasury.gov.za/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-  href="http://mfma.treasury.gov.za/Media_Releases/">Publications and Media Releases</a></span><span>
+  href="http://mfma.treasury.gov.za/MEDIA_RELEASES/">Publications and Media Releases</a></span><span>
   &gt; </span><span><a class="ms-sitemapdirectional" href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/">Municipal
   Payment Schedule</a></span><span> &gt; </span><span class="breadcrumbCurrent">2016/17</span></span>
 layout: default
@@ -27,12 +27,12 @@ title: 2016/17
 <td><font><strong></strong></font></td></tr>
 <tr>
 <td><font><strong></strong></font></td>
-<td><a target="_blank"><font><strong>Summary of Local Government Grants: 2017 Payment Schedule </strong></font></a></td>
+<td><font><strong>Summary of Local Government Grants: 2017 Payment Schedule </strong></font></td>
 <td><font></font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
 <td>
-<p><font><font><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/1.%20Summary%20per%20programme.pdf" target="_blank"><font><font><font><font>Summary per programme</font></font></font></font></a></font></font></font></font></p>
+<p><font><font><font><font><font><font><font><font>Summary per programme</font></font></font></font></font></font></font></font></p>
 <p><font></font> </p></td>
 <td><font>(1.429kb)</font></td></tr>
 <tr>
@@ -42,15 +42,15 @@ title: 2016/17
 <tr>
 <td><font></font></td>
 <td>
-<p><a target="_blank"><font><strong>Grants per programme</strong></font></a></p></td>
+<p><font><strong>Grants per programme</strong></font></p></td>
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Equitable%20Share%20(ES%20Pre%20election).pdf" target="_blank"><font><font>Equitable Share (pre-election)</font></font></a></font></font></td>
+<td><font><font><font><font>Equitable Share (pre-election)</font></font></font></font></td>
 <td><font>(546kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Equitable%20Share%20(ES%20Post%20election).pdf"><font>Equitable share (post-election)</font></a></td>
+<td><font>Equitable share (post-election)</font></td>
 <td>(709kb)</td></tr>
 <tr>
 <td><font></font></td>
@@ -58,94 +58,94 @@ title: 2016/17
 <td><font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Municipal%20Infrastrucutre%20Grant%20(MIG).pdf" target="_blank"><font><font><font><font>Municipal Infrastructure Grant (MIG)</font></font></font></font></a></font></font></font></font></td>
+<td><font><font><font><font><font><font><font><font>Municipal Infrastructure Grant (MIG)</font></font></font></font></font></font></font></font></td>
 <td><font>(730kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><font><font><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Municipal%20Systems%20Impovement%20Grant%20(MSIG%206B).pdf" target="_blank"><font><font><font><font><font><font>Municipal Systems Improvement Grant (MSIG)</font></font></font></font></font></font></a></font></font></font></font></font></font></td>
+<td><font><font><font><font><font><font><font><font><font><font><font><font>Municipal Systems Improvement Grant (MSIG)</font></font></font></font></font></font></font></font></font></font></font></font></td>
 <td><font>(482kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Municipal%20Disaster%20Recovery%20Grant%20(MDRG).pdf"><font>Municipal Disaster Recovery Grant (DRCG)</font></a></td>
+<td><font>Municipal Disaster Recovery Grant (DRCG)</font></td>
 <td>(196kb)</td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Financial%20Management%20Grant%20(FMG).pdf" target="_blank"><font><font>Local Government Financial Management Grant (FMG)</font></font></a><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2012-13/4.%20MSIG%202012-13.xls" target="_blank"><font><font></font></font></a></font></font></td>
+<td><font><font><font><font>Local Government Financial Management Grant (FMG)</font></font><font><font></font></font></font></font></td>
 <td><font>(540kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Infrastruture%20Skills%20Development%20Grant%20(ISDG).pdf" target="_blank"><font>Infrastructure Skills Development Grant (ISD)</font></a></td>
+<td><font>Infrastructure Skills Development Grant (ISD)</font></td>
 <td><font>(208kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Integrated%20City%20Development%20Grant%20(ICDG).pdf"><font>Integrated City Development Grant (ICDG)</font></a></td>
+<td><font>Integrated City Development Grant (ICDG)</font></td>
 <td><font>(213kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Neighbourhood%20Development%20Partnership%20Grant%20(Technical%20Assistance).pdf" target="_blank"><font>Neighbourhood Development Partnership Grant (Technical Assistance)</font></a></td>
+<td><font>Neighbourhood Development Partnership Grant (Technical Assistance)</font></td>
 <td><font>(358kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Neighbourhood%20Development%20Partnership%20Gant%20(Capital%20Grant).pdf" target="_blank"><font>Neighbourhood Development Partnership Programme (Capital Grant)</font></a></td>
+<td><font>Neighbourhood Development Partnership Programme (Capital Grant)</font></td>
 <td><font>(211kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Water%20Services%20Infrastructure%20Grant%20(WSIG%205B).pdf" target="_blank"><font>Water Services Infrastructure Grant (MWIG 5B)</font></a> (direct)</td>
+<td><font>Water Services Infrastructure Grant (MWIG 5B)</font> (direct)</td>
 <td><font>(296kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Water%20Services%20Infrastructure%20Grant%20(WSIG%206B).pdf" target="_blank"><font>Water Services Infrastructure Grant (MWIG 6B)</font></a> (indirect)</td>
+<td><font>Water Services Infrastructure Grant (MWIG 6B)</font> (indirect)</td>
 <td>(403kb)</td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
 <td>
-<p><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Regional%20Bulk%20Infrastructure%20Grant%20(RBIG%205B).pdf" target="_blank"><font>Regional Bulk Infrastructure Grant (RBIG 5B)</font></a></p></td>
+<p><font>Regional Bulk Infrastructure Grant (RBIG 5B)</font></p></td>
 <td><font>(261kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
 <td>
-<p><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Regional%20Bulk%20Infrastructure%20Grant%20(RBIG%206B).pdf" target="_blank"><font>Regional Bulk Infrastructure Grant (RBIG 6B)</font></a></p></td>
+<p><font>Regional Bulk Infrastructure Grant (RBIG 6B)</font></p></td>
 <td>(654kb)</td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Public%20Transport%20Network%20Grant%20(PTNG).pdf" target="_blank"><font>Public Transport Network Grant (PTNG)</font></a></td>
+<td><font>Public Transport Network Grant (PTNG)</font></td>
 <td><font>(280kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Rural%20Roads%20Asset%20Management%20Systems%20Grant%20(RRAMS%205B).pdf" target="_blank"><font>Rural Roads Asset Management Grant (RRAMS 5B)</font></a></td>
+<td><font>Rural Roads Asset Management Grant (RRAMS 5B)</font></td>
 <td><font>(235kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Integrated%20National%20Electrification%20Programme%20Municipal%20(INEP%205B).pdf" target="_blank"><font>Integrated National Electrification Programme (INEP 5B) : Municipal</font></a></td>
+<td><font>Integrated National Electrification Programme (INEP 5B) : Municipal</font></td>
 <td><font>(809kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Integrated%20National%20Electrification%20Programme%20Eskon%20(INEP%206B).pdf" target="_blank"><font>Integrated National Electrification Programme (INEP 6B) : ESKOM</font></a></td>
+<td><font>Integrated National Electrification Programme (INEP 6B) : ESKOM</font></td>
 <td><font>(987kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Electricity%20Demand%20Side%20Management%20Grant%20(EDSM).pdf" target="_blank"><font>Electricity Demand Side Management (EDSM)</font></a></td>
+<td><font>Electricity Demand Side Management (EDSM)</font></td>
 <td><font>(232kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Urban%20Settlements%20Development%20Grant%20(USDG).pdf" target="_blank"><font>Urban Settlement Development Grant (USDG)</font></a></td>
+<td><font>Urban Settlement Development Grant (USDG)</font></td>
 <td><font>(257kb)</font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Expanded%20Public%20Works%20Programme%20(EPWP).pdf" target="_blank"><font><font>Expanded Public Works Programme Integrated Grant for municipalities (EPWP)</font></font></a></font></font></font></font></td>
+<td><font><font><font><font><font><font>Expanded Public Works Programme Integrated Grant for municipalities (EPWP)</font></font></font></font></font></font></td>
 <td><font>(663kb)</font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Municipal%20Demarcation%20Transition%20Grant%20(MDTG%20Pre%20election).pdf"><font>Municipal Demarcation Transition Grant (MDTG pre-election)</font></a></font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2012-13/7.%20ISD%202012-13.xls" target="_blank"></a></td>
+<td><font><font>Municipal Demarcation Transition Grant (MDTG pre-election)</font></font></td>
 <td>(245kb)</td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Municipal%20Demarcation%20Transition%20Grant%20(MDTG%20Post%20election).pdf"><font>Municipal Demarcation Transition Grant (MDTG post-election)</font></a></td>
+<td><font>Municipal Demarcation Transition Grant (MDTG post-election)</font></td>
 <td>(255kb)</td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
 <td>
-<p><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Bucket%20Eradication%20Programme%20Grant%20(BEPG).pdf"><font>Bucket Eradication Programme Grant (BEPG)</font></a></p>
+<p><font>Bucket Eradication Programme Grant (BEPG)</font></p>
 <p> </p></td>
 <td>(251kb)</td></tr>
 <tr>
@@ -155,50 +155,50 @@ title: 2016/17
 <tr>
 <td><font></font></td>
 <td>
-<p><a target="_blank"><font><strong>Grants per province per municipality</strong></font></a></p></td>
+<p><font><strong>Grants per province per municipality</strong></font></p></td>
 <td><font></font></td></tr>
 <tr>
 <td><img src="/PublishingImages/pdf16.gif"/></td>
-<td><font><font><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/1.%20Summary%20per%20province.pdf" target="_blank"><font><font><font><font>Summary</font> per province</font></font></font></a></font></font></font></font></td>
+<td><font><font><font><font><font><font><font><font>Summary</font> per province</font></font></font></font></font></font></font></td>
 <td><font>(5,210kb)</font></td></tr>
 <tr>
 <td><font>.</font></td>
 <td></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Eastern%20Cape.pdf" target="_blank"><font><font>Eastern Cape</font></font></a></font></font></td>
+<td><font><font><font><font>Eastern Cape</font></font></font></font></td>
 <td><font><font>(2,668kb)</font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Free%20State.pdf" target="_blank"><font><font>Free State</font></font></a></font></font></td>
+<td><font><font><font><font>Free State</font></font></font></font></td>
 <td><font><font>(1,731kb)</font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Gauteng.pdf" target="_blank"><font><font>Gauteng</font></font></a></font></font></td>
+<td><font><font><font><font>Gauteng</font></font></font></font></td>
 <td><font><font><font>(1,407kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/KwaZulu%20Natal.pdf" target="_blank"><font><font>Kwazulu-Natal</font></font></a></font></font></td>
+<td><font><font><font><font>Kwazulu-Natal</font></font></font></font></td>
 <td><font><font><font>(4,179kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Limpopo.pdf" target="_blank"><font><font>Limpopo</font></font></a></font></font></td>
+<td><font><font><font><font>Limpopo</font></font></font></font></td>
 <td><font><font><font>(2,291kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Mpumalanga.pdf" target="_blank"><font><font>Mpumalanga</font></font></a></font></font></td>
+<td><font><font><font><font>Mpumalanga</font></font></font></font></td>
 <td><font><font><font>(1,472kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Northern%20Cape.pdf" target="_blank"><font><font>Northern Cape</font></font></a></font></font></td>
+<td><font><font><font><font>Northern Cape</font></font></font></font></td>
 <td><font><font><font>(1,839kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/North%20West.pdf" target="_blank"><font><font>North West</font></font></a></font></font></td>
+<td><font><font><font><font>North West</font></font></font></font></td>
 <td><font><font><font>(1,880kb)</font></font></font></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
-<td><font><font><a href="http://mfma.treasury.gov.za/Media_Releases/Municipal%20Payment%20Schedule/Documents/2016-17/Western%20Cape.pdf" target="_blank"><font><font>Western Cape</font></font></a></font></font></td>
+<td><font><font><font><font>Western Cape</font></font></font></font></td>
 <td><font><font><font>(1,764kb)</font></font></font></td></tr></tbody></table></div>
 </td>
 </tr>
