--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Reporting Reference Group/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Reporting Reference Group/index.html
@@ -12,6 +12,8 @@ original_url: http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegula
 table_items:
 - {label: 01. 2 March 2017, modified_date: '3/3/2017 4:52 PM', path: /RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Reporting
     Reference Group/01. 2 March 2017, type: table_form_item, user: Elsabe Rossouw}
+- {label: 02. 3 May 2017, modified_date: '5/4/2017 12:43 PM', path: /RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/Reporting
+    Reference Group/02. 3 May 2017, type: table_form_item, user: Elsabe Rossouw}
 title: null
 
 ---
