--- a/Documents/03. Budget Documentation/2017-18/02. Local municipalities/index.html
+++ b/Documents/03. Budget Documentation/2017-18/02. Local municipalities/index.html
@@ -184,6 +184,9 @@ table_items:
 - {label: KZN436 Dr Nkosazana Dlamini Zuma, modified_date: '4/18/2017 11:24 AM', path: /Documents/03.
     Budget Documentation/2017-18/02. Local municipalities/KZN436 Dr Nkosazana Dlamini
     Zuma, type: table_form_item, user: Sephiri Tlhomeli}
+- {label: LIM332 Greater Letaba, modified_date: '5/2/2017 12:49 PM', path: /Documents/03.
+    Budget Documentation/2017-18/02. Local municipalities/LIM332 Greater Letaba, type: table_form_item,
+  user: Sephiri Tlhomeli}
 - {label: LIM333 Greater Tzaneen, modified_date: '4/18/2017 11:33 AM', path: /Documents/03.
     Budget Documentation/2017-18/02. Local municipalities/LIM333 Greater Tzaneen,
   type: table_form_item, user: Sephiri Tlhomeli}
@@ -222,6 +225,9 @@ table_items:
   user: Elsabe Rossouw}
 - {label: MP303 Makhado, modified_date: '4/18/2017 2:09 PM', path: /Documents/03.
     Budget Documentation/2017-18/02. Local municipalities/MP303 Makhado, type: table_form_item,
+  user: Sephiri Tlhomeli}
+- {label: MP304 Pixley Ka Seme, modified_date: '5/9/2017 9:27 AM', path: /Documents/03.
+    Budget Documentation/2017-18/02. Local municipalities/MP304 Pixley Ka Seme, type: table_form_item,
   user: Sephiri Tlhomeli}
 - {label: MP313 Steve Tshwete, modified_date: '4/18/2017 2:12 PM', path: /Documents/03.
     Budget Documentation/2017-18/02. Local municipalities/MP313 Steve Tshwete, type: table_form_item,
