--- a/Documents/03. Budget Documentation/2017-18/index.html
+++ b/Documents/03. Budget Documentation/2017-18/index.html
@@ -7,14 +7,10 @@ breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_ContentMap"><span><a cla
 layout: default
 original_url: http://mfma.treasury.gov.za/Documents/03. Budget Documentation/2017-18
 table_items:
-- {label: 01. Metros, modified_date: '4/4/2017 4:26 PM', path: /Documents/03. Budget
-    Documentation/2017-18/01. Metros, type: table_form_item, user: Elsabe Rossouw}
-- {label: 02. Local municipalities, modified_date: '4/13/2017 11:00 AM', path: /Documents/03.
-    Budget Documentation/2017-18/02. Local municipalities, type: table_form_item,
-  user: Sephiri Tlhomeli}
-- {label: 03. District municipalities, modified_date: '4/12/2017 2:51 PM', path: /Documents/03.
-    Budget Documentation/2017-18/03. District municipalities, type: table_form_item,
-  user: Sephiri Tlhomeli}
+- {label: 01. Draft, modified_date: '6/6/2017 4:08 PM', path: /Documents/03. Budget
+    Documentation/2017-18/01. Draft, type: table_form_item, user: Sephiri Tlhomeli}
+- {label: 02. Final, modified_date: '6/6/2017 4:09 PM', path: /Documents/03. Budget
+    Documentation/2017-18/02. Final, type: table_form_item, user: Sephiri Tlhomeli}
 title: null
 
 ---
