--- a/Documents/03. Budget Documentation/2017-18/01. Draft/01. Metros/index.html
+++ b/Documents/03. Budget Documentation/2017-18/01. Draft/01. Metros/index.html
@@ -27,6 +27,9 @@ table_items:
 - {label: JHB City of Johannesburg, modified_date: '4/5/2017 9:53 AM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/01. Metros/JHB City of Johannesburg, type: table_form_item,
   user: Elsabe Rossouw}
+- {label: MAN Mangaung, modified_date: '10/23/2017 11:28 AM', path: /Documents/03.
+    Budget Documentation/2017-18/01. Draft/01. Metros/MAN Mangaung, type: table_form_item,
+  user: Sephiri Tlhomeli}
 - {label: NMA Nelson Mandela Bay, modified_date: '4/4/2017 4:30 PM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/01. Metros/NMA Nelson Mandela Bay, type: table_form_item,
   user: Elsabe Rossouw}
