--- a/Documents/03. Budget Documentation/2017-18/01. Draft/03. District municipalities/index.html
+++ b/Documents/03. Budget Documentation/2017-18/01. Draft/03. District municipalities/index.html
@@ -27,6 +27,9 @@ table_items:
 - {label: DC18 Lejweleputswa, modified_date: '4/12/2017 3:27 PM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC18 Lejweleputswa,
   type: table_form_item, user: Sephiri Tlhomeli}
+- {label: DC19 Thabo Mofutsanyana, modified_date: '10/23/2017 11:50 AM', path: /Documents/03.
+    Budget Documentation/2017-18/01. Draft/03. District municipalities/DC19 Thabo
+    Mofutsanyana, type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC2 Cape Winelands, modified_date: '4/12/2017 2:59 PM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC2 Cape Winelands,
   type: table_form_item, user: Sephiri Tlhomeli}
@@ -75,18 +78,27 @@ table_items:
 - {label: DC35 Capricorn, modified_date: '6/7/2017 10:47 AM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC35 Capricorn,
   type: table_form_item, user: Sephiri Tlhomeli}
+- {label: DC36 Waterberg, modified_date: '10/23/2017 11:54 AM', path: /Documents/03.
+    Budget Documentation/2017-18/01. Draft/03. District municipalities/DC36 Waterberg,
+  type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC39 Dr Ruth Segomotsi Mompati, modified_date: '4/25/2017 11:47 AM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC39 Dr Ruth
     Segomotsi Mompati, type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC4 Eden, modified_date: '4/12/2017 3:02 PM', path: /Documents/03. Budget
     Documentation/2017-18/01. Draft/03. District municipalities/DC4 Eden, type: table_form_item,
   user: Sephiri Tlhomeli}
+- {label: DC42 Sedibeng, modified_date: '10/23/2017 11:56 AM', path: /Documents/03.
+    Budget Documentation/2017-18/01. Draft/03. District municipalities/DC42 Sedibeng,
+  type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC43 Harry Gwala, modified_date: '4/12/2017 3:54 PM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC43 Harry
     Gwala, type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC44 Alfred Nzo, modified_date: '4/25/2017 11:37 AM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC44 Alfred
     Nzo, type: table_form_item, user: Sephiri Tlhomeli}
+- {label: DC45 John Taolo Gaetsewe, modified_date: '10/23/2017 11:58 AM', path: /Documents/03.
+    Budget Documentation/2017-18/01. Draft/03. District municipalities/DC45 John Taolo
+    Gaetsewe, type: table_form_item, user: Sephiri Tlhomeli}
 - {label: DC48 Rand West, modified_date: '6/7/2017 10:57 AM', path: /Documents/03.
     Budget Documentation/2017-18/01. Draft/03. District municipalities/DC48 Rand West,
   type: table_form_item, user: Sephiri Tlhomeli}
