--- a/Circulars/index.html
+++ b/Circulars/index.html
@@ -15,8 +15,12 @@ title: Circulars
 <table>
 <tbody>
 <tr>
-<td><img src="/PublishingImages/Folder.jpg"/></td>
-<td><font><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Budget%20Circular%20No%2094%20-%2008%20March%202019_.pdf"><font>MFMA Circular No 94 - Municipal Budget Circular for the 2019/20 MTREF - 8 March 2019</font></a></font></td>
+<td><img src="/PublishingImages/pdfnew.gif"/></td>
+<td><font><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Circular%20No%2095%20-%20Interventions%20and%20Debt%20Relief%20-%201%20June%202019.pdf" target="_blank"><font>MFMA Circular No 95 - Interventions and Debt Relief - 1 June 2019</font></a></font></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
+<td><font><a href="http://mfma.treasury.gov.za/Circulars/Documents/MFMA%20Budget%20Circular%20No%2094%20-%2008%20March%202019_.pdf" target="_blank"><font>MFMA Circular No 94 - Municipal Budget Circular for the 2019/20 MTREF - 8 March 2019</font></a></font></td>
 <td></td></tr>
 <tr>
 <td><img src="/PublishingImages/Folder.jpg"/></td>
