--- a/Return_Forms/index.html
+++ b/Return_Forms/index.html
@@ -184,6 +184,11 @@ title: Return Forms
 <td><font><font><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Quarterly%20Borrowing%20Monitoring%20(BM)/Muncde_BM_ccyy_Qn.XLS" target="_blank"><font><font>BM - <font><font>Quarterly Borrowing Monitoring</font></font></font></font></a></font></font></td>
 <td><font></font></td></tr>
 <tr>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
+<td>
+<p>   <a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Borrowing%20Monitoring%20Return%20-%20Guideline.pdf" target="_blank"><font>Borrowing Monitor Return - Guideline</font></a></p></td>
+<td></td></tr>
+<tr>
 <td><font><img src="/PublishingImages/excel_icon.gif"/></font></td>
 <td><font><font><font><font><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Muncde_IM_ccyy_Qn.xls" target="_blank"><font><font><font><font>IM - Investment Management</font></font></font></font></a></font></font></font></font></td>
 <td><font></font></td></tr>
