--- a/Circulars/Documents/MFMA Circular No 88/index.html
+++ b/Circulars/Documents/MFMA Circular No 88/index.html
@@ -31,6 +31,10 @@ table_items:
     6:38 PM', path: 'http://mfmamirror.s3.amazonaws.com/Circulars/Documents/MFMA Circular
     No 88/06. MFMA Circular No. 88 - 30 November 2017.pptx', type: table_form_item,
   user: Elsabe Rossouw}
+- {label: 2nd FAQs Circular No. 88 (final) May 2019, modified_date: '5/29/2019 1:48
+    PM', path: 'http://mfmamirror.s3.amazonaws.com/Circulars/Documents/MFMA Circular
+    No 88/2nd FAQs Circular No. 88 (final) May 2019.pdf', type: table_form_item, user: Elsabe
+    Rossouw}
 - {label: Circular 88 FAQs Draft v2 10 April 2018, modified_date: '4/26/2018 5:09
     PM', path: 'http://mfmamirror.s3.amazonaws.com/Circulars/Documents/MFMA Circular
     No 88/Circular 88 FAQs Draft v2 10 April 2018.pdf', type: table_form_item, user: Elsabe
