--- a/Documents/02. Built Environment Performance Plans/2019-20/index.html
+++ b/Documents/02. Built Environment Performance Plans/2019-20/index.html
@@ -12,6 +12,13 @@ table_items:
 - {label: 02. Draft BEPP documents, modified_date: '3/25/2019 9:35 AM', path: /Documents/02.
     Built Environment Performance Plans/2019-20/02. Draft BEPP documents, type: table_form_item,
   user: Elsabe Rossouw}
+- {label: 03. Adopted BEPP documents, modified_date: '5/31/2019 11:40 AM', path: /Documents/02.
+    Built Environment Performance Plans/2019-20/03. Adopted BEPP documents, type: table_form_item,
+  user: Elsabe Rossouw}
+- {label: 01. CR BEPP Supplementary Guidance 2019-20_v4 - FINAL, modified_date: '5/30/2019
+    12:43 PM', path: 'http://mfmamirror.s3.amazonaws.com/Documents/02. Built Environment
+    Performance Plans/2019-20/01. CR BEPP Supplementary Guidance 2019-20_v4 - FINAL.pdf',
+  type: table_form_item, user: Elsabe Rossouw}
 title: null
 
 ---
