--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01. mSCOA Circulars/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01. mSCOA Circulars/index.html
@@ -52,6 +52,12 @@ table_items:
     mSCOA Circulars/07. mSCOA Circular No 7 - 2 March 2020
   type: table_form_item
   user: Elsabe Rossouw
+- label: 08. mSCOA Circular No 8 - 29 April 2020
+  modified_date: 4/29/2020 9:23 AM
+  path: /RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Documents/01.
+    mSCOA Circulars/08. mSCOA Circular No 8 - 29 April 2020
+  type: table_form_item
+  user: Elsabe Rossouw
 title: null
 
 ---
