--- a/Circulars/index.html
+++ b/Circulars/index.html
@@ -16,6 +16,14 @@ title: Circulars
 <tbody>
 <tr>
 <td><img src="/PublishingImages/foldernew.gif"/></td>
+<td><a href="/Circulars/Documents/Circular 101 - Bulk Procurement Strategy for Government Institutions"><font>MFMA Circular No 101 - COVID-19 Bulk Procurement Strategy for Government Institutions - 15 April 2020</font></a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/pdf16.gif"/></td>
+<td><a href="http://mfma.treasury.gov.za/Circulars/Documents/Budget%20Circular%20No%2099/Annexure%20to%20MFMA%20Budget%20Circular%20No%2099%20for%202020-21%20MTREF%20-%2008%20April%202020%20%28final%29.pdf"><font>Annexure to MFMA Circular No 99 for the 2020/21 MTREF - 8 April 2020</font></a></td>
+<td></td></tr>
+<tr>
+<td><img src="/PublishingImages/Folder.jpg"/></td>
 <td><a href="/Circulars/Documents/MFMA%20Circular%20100%20-%20Emergency%20Procurement%20in%20Response%20to%20COVID-19%20-%20Dated%2019%20March%202020"><font>MFMA Circular No 100 - Emergency Procurement in Response to COVID-19 - 19 Match 2020</font></a></td>
 <td></td></tr>
 <tr>
