--- a/Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/index.html
+++ b/Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/index.html
@@ -108,10 +108,22 @@ table_items:
     Overberg
   type: table_form_item
   user: Elsabe Rossouw
+- label: DC30 Gert Sibande
+  modified_date: 4/23/2020 6:43 PM
+  path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC30
+    Gert Sibande
+  type: table_form_item
+  user: Elsabe Rossouw
 - label: DC31 Nkangala
   modified_date: 3/9/2020 4:52 PM
   path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC31
     Nkangala
+  type: table_form_item
+  user: Elsabe Rossouw
+- label: DC32 Ehlanzeni
+  modified_date: 4/23/2020 6:45 PM
+  path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC32
+    Ehlanzeni
   type: table_form_item
   user: Elsabe Rossouw
 - label: DC34 Vhembe
@@ -144,6 +156,12 @@ table_items:
     Garden Route
   type: table_form_item
   user: Elsabe Rossouw
+- label: DC40 Dr Kenneth Kaunda
+  modified_date: 4/23/2020 6:46 PM
+  path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC40
+    Dr Kenneth Kaunda
+  type: table_form_item
+  user: Elsabe Rossouw
 - label: DC43 Harry Gwala
   modified_date: 2/19/2020 2:14 PM
   path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC43
@@ -172,6 +190,12 @@ table_items:
   modified_date: 2/4/2020 2:56 PM
   path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC5
     Central Karoo
+  type: table_form_item
+  user: Elsabe Rossouw
+- label: DC6 Namakwa
+  modified_date: 4/23/2020 6:42 PM
+  path: /Documents/05. Annual Financial Statements/2018-19/Audited/03. District municipalities/DC6
+    Namakwa
   type: table_form_item
   user: Elsabe Rossouw
 - label: DC7 Pixley Ka Seme (NC)
